<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#ECEFF1"
    tools:context=".MainActivity">

    <TextView
        android:id="@+id/title_app"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:paddingTop="32dp"
        android:text="@string/title_app"
        android:textSize="24sp"
        android:textColor="#B0BEC5"
        android:fontFamily="sans-serif-medium"
        android:textStyle="italic|bold"/>

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:layout_below="@id/title_app"
        android:layout_centerVertical="true"
        android:layout_centerHorizontal="true"
        android:paddingBottom="50dp"
        android:paddingLeft="30dp"
        android:paddingRight="30dp"
        android:paddingTop="20dp">

        <Button
            android:id="@+id/spotify_streamer"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="1"
            android:layout_centerHorizontal="true"
            android:layout_below="@id/title_app"
            android:text="@string/spotify_streamer"
            android:textColor="#37474F"
            android:background="#78909C"
            android:onClick="sendMessageSpotifyStreamer"/>

        <Button
            android:id="@+id/scores_app"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="1"
            android:text="@string/scores_app"
            android:layout_centerHorizontal="true"
            android:layout_below="@id/spotify_streamer"
            android:layout_marginTop="8dp"
            android:textColor="#37474F"
            android:background="#78909C"
            android:onClick="sendMessageScoresApp"/>

        <Button
            android:id="@+id/library_app"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="1"
            android:text="@string/library_app"
            android:layout_centerHorizontal="true"
            android:layout_below="@id/scores_app"
            android:layout_marginTop="8dp"
            android:textColor="#37474F"
            android:background="#78909C"
            android:onClick="sendMessageLibraryApp"/>

        <Button
            android:id="@+id/build_it_bigger"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="1"
            android:text="@string/build_it_bigger"
            android:layout_centerHorizontal="true"
            android:layout_below="@id/library_app"
            android:layout_marginTop="8dp"
            android:textColor="#37474F"
            android:background="#78909C"
            android:onClick="sendMessageBuildItBigger"/>

        <Button
            android:id="@+id/bacon_reader"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="1"
            android:text="@string/bacon_reader"
            android:layout_centerHorizontal="true"
            android:layout_below="@id/build_it_bigger"
            android:layout_marginTop="8dp"
            android:textColor="#37474F"
            android:background="#78909C"
            android:onClick="sendMessageBaconReader"/>

        <Button
            android:id="@+id/capstone"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="1"
            android:text="@string/capstone"
            android:layout_centerHorizontal="true"
            android:layout_below="@id/bacon_reader"
            android:layout_marginTop="8dp"
            android:paddingRight="8dp"
            android:paddingLeft="8dp"
            android:textColor="#ECEFF1"
            android:background="#263238"
            android:onClick="sendMessageCapstone"/>

    </LinearLayout>

</RelativeLayout>
